RESOLVED FIXED197692
Backing-sharing layers with transforms render incorrectly
https://bugs.webkit.org/show_bug.cgi?id=197692
Summary Backing-sharing layers with transforms render incorrectly
Simon Fraser (smfr)
Reported 2019-05-08 09:14:25 PDT
If a layer gets backing-shared that has a transform, the rendering is incorrect. Affects http://www.deeplearningbook.org/contents/intro.html
Attachments
Patch (16.82 KB, patch)
2019-05-09 22:18 PDT, Simon Fraser (smfr)
no flags
WIP (23.49 KB, patch)
2019-05-10 10:17 PDT, Simon Fraser (smfr)
no flags
Patch (38.21 KB, patch)
2019-05-10 22:00 PDT, Simon Fraser (smfr)
koivisto: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews102 for mac-highsierra (3.08 MB, application/zip)
2019-05-10 23:06 PDT, EWS Watchlist
no flags
Patch (33.88 KB, patch)
2019-05-10 23:23 PDT, Simon Fraser (smfr)
ews-watchlist: commit-queue-
Archive of layout-test-results from ews115 for mac-highsierra (2.86 MB, application/zip)
2019-05-10 23:51 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.53 MB, application/zip)
2019-05-11 00:01 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews103 for mac-highsierra (3.10 MB, application/zip)
2019-05-11 00:29 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews107 for mac-highsierra-wk2 (2.65 MB, application/zip)
2019-05-11 00:43 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews215 for win-future (13.55 MB, application/zip)
2019-05-11 01:06 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews114 for mac-highsierra (2.92 MB, application/zip)
2019-05-11 01:20 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews124 for ios-simulator-wk2 (8.45 MB, application/zip)
2019-05-11 01:26 PDT, EWS Watchlist
no flags
Patch (31.58 KB, patch)
2019-05-11 08:18 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2019-05-09 22:15:22 PDT
Simon Fraser (smfr)
Comment 2 2019-05-09 22:18:52 PDT
Simon Fraser (smfr)
Comment 3 2019-05-10 10:17:20 PDT
Simon Fraser (smfr)
Comment 4 2019-05-10 22:00:48 PDT
Antti Koivisto
Comment 5 2019-05-10 22:16:38 PDT
Comment on attachment 369637 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=369637&action=review > LayoutTests/compositing/shared-backing/shared-layer-has-transform-expected.html:31 > + .trigger { > + transform: translateZ(0); I imagine we might optimimize this case some day to not composite so this might not be the safest trigger.
Simon Fraser (smfr)
Comment 6 2019-05-10 22:36:03 PDT
(In reply to Antti Koivisto from comment #5) > Comment on attachment 369637 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=369637&action=review > > > LayoutTests/compositing/shared-backing/shared-layer-has-transform-expected.html:31 > > + .trigger { > > + transform: translateZ(0); > > I imagine we might optimimize this case some day to not composite so this > might not be the safest trigger. When that happens we'll have to change a lot of tests :)
EWS Watchlist
Comment 7 2019-05-10 23:06:01 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 8 2019-05-10 23:06:04 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 9 2019-05-10 23:18:56 PDT
Added a couple of test files by mistake. Why is mac-wk2 green?
Simon Fraser (smfr)
Comment 10 2019-05-10 23:23:55 PDT
EWS Watchlist
Comment 11 2019-05-10 23:51:54 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 12 2019-05-10 23:51:56 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 13 2019-05-11 00:01:00 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 14 2019-05-11 00:01:02 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 15 2019-05-11 00:29:19 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 16 2019-05-11 00:29:21 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 17 2019-05-11 00:43:23 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 18 2019-05-11 00:43:24 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 19 2019-05-11 01:06:43 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 20 2019-05-11 01:06:46 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 21 2019-05-11 01:20:53 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 22 2019-05-11 01:20:55 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 23 2019-05-11 01:26:57 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 24 2019-05-11 01:26:59 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 25 2019-05-11 08:18:25 PDT
Simon Fraser (smfr)
Comment 26 2019-05-11 10:21:22 PDT
*** Bug 197783 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 27 2019-05-11 10:35:36 PDT
Comment on attachment 369652 [details] Patch Clearing flags on attachment: 369652 Committed r245205: <https://trac.webkit.org/changeset/245205>
Note You need to log in before you can comment on or make changes to this bug.